# Dippa

./: .gitignore  LICENSE  README.md  experiment.yml  pyproject.toml  requirements.txt  setup.py
conf/: conf_datamodule.yml  conf_dataset.yml  conf_model.yml  conf_train.yml  experiment.yml
conf/_tests/: conf_datamodule_test.yml  conf_dataset_test.yml  conf_model_test.yml  conf_train_test.yml
datasets/: README.md
datasets/consep_test/: README.txt
datasets/data/: README.md
datasets/patches/: README.md
notebooks/: 1_Convert_downloaded_data.ipynb  1_train_model.ipynb  2_Create_databases.ipynb  2_infer_and_benchmark.ipynb  3.5_Train_hparam_tune.ipynb  3_Train_model.ipynb  4_Infer_and_benchmark.ipynb  README.md  test_losses.ipynb
patches/: README.md
results/: README.md
src/: config.py  convert.py  download.py  infer.py  patch.py  settings.py  train.py
src/conf/: conf_schema.py  config.py  consep.yml  general.yml  kumar.yml  pannuke.yml
src/data/: __init__.py
src/dl/: datasets.py  inferer.py  lightning_model.py  loss_builder.py  losses.py  model_builder.py  models.py  torch_img_utils.py  torch_utils.py
src/img_processing/: augmentations.py  post_processing.py  pre_processing.py  process_utils.py  viz_utils.py
src/matlab/: bwneigh.m  fawshedsegm.m  ind2rect.m  mergenuclei.m  rprops.m  run_juhas_method.m  run_juhas_method.mlx  segmpp.m  splitnuclei.m  test_segmentation.m  wthresh.m
src/metrics/: __init__.py  benchmarker.py  metrics.py  utils.py
src/notebooks/: 1_Convert_downloaded_data.ipynb  2_Create_databases.ipynb  3_Train_model.ipynb  4_Infer_and_benchmark.ipynb
src/patching/: __init__.py  tiler_stitcher.py  tiler_stitcher_torch.py  viz_patches.py
src/python/: config.py
src/scripts/: infer.py  (+4 more)
(+404 files in other folders)
